[gd_scene load_steps=2 format=3 uid="uid://d2t4dx12xf726"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_m53lf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m53lf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -58.0
offset_right = 41.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "Are You a...."

[node name="ServerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -17.0
offset_right = -26.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Server"

[node name="ClientButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 71.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Client"

[connection signal="pressed" from="ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="ClientButton" to="." method="_on_client_button_pressed"]
